...
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homelogo" />


    <Button
        android:id="@+id/buttonLoginAsSeller"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/trans_button_style"
...
        android:text="SELL Textbooks"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

    <Button
        android:id="@+id/buttonLoginAsCustomer"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/trans_button_style"
...
