...
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="#eeeeee"
            android:layout_alignParentBottom="true"  >
            <Button
                android:id="@+id/btnSellBackToMain"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="btnCusBackToMain"
                android:text="BACK" />

            <Button
                android:id="@+id/addNewBook"
                android:layout_width="120dp"
                android:layout_height="58dp"
...
