<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".presentation.EditBookActivity">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="440dp"
        android:layout_height="60dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:text="Register a new account"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerNameTitle"
        android:layout_width="240dp"
        android:layout_height="28dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        android:text="Input your username"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"  />


    <EditText
        android:id="@+id/registerName"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_style"
        android:ems="10"
        android:hint="Length no more than 20"
        android:inputType="text"
        android:maxLength="20"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameTitle" />


    <TextView
        android:id="@+id/registerPswTitle"
        android:layout_width="240dp"
        android:layout_height="28dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:textSize="20dp"
        android:layout_marginTop="60dp"
        android:text="Input your password"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName" />


    <EditText
        android:id="@+id/registerPsw"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="10dp"
        android:hint="At least one upper, lower letter and a number"
        android:maxLength="20"
        android:background="@drawable/text_style"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPswTitle" />


    <Button
        android:id="@+id/registerCancel"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/button_style"
        android:onClick="buttonRegCancel"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/registerSubmit"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_style"
        android:onClick="buttonRegSubmit"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="OnClick" />


</android.support.constraint.ConstraintLayout>